# M-IBVS

./: .gitignore  LICENSE  readme.md  ros_deps.repo  run.sh
src/: .gitignore
src/mibvs/: CMakeLists.txt  package.xml
src/mibvs/launch/: spawn_gazebo.launch  startup.launch
src/mibvs/models/ar_helipad/materials/scripts/: marker1.material  marker2.material
src/mibvs/models/disk/: model.config  model.sdf
src/mibvs/models/marker1/: model.config  model.sdf
src/mibvs/models/marker2/: model.config  model.sdf
src/mibvs/models/marker2/materials/scripts/: marker2.material
src/mibvs/models/marker3/: model.sdf
src/mibvs/models/marker4/: model.config  model.sdf
src/mibvs/models/wall/: model.config  model.sdf
src/mibvs/models/wall/materials/scripts/: texture.config
src/mibvs/src/: ibvs_moment.py  ibvs_point.py  ibvs_point_exp.py  ibvs_point_feature_uav_only.py  sonn_ibvs.py  transform_between_two_frames.py
src/mibvs/visualization/: rosbag_to_plot_simulation.ipynb  visulization.py
src/mibvs/worlds/: empty_world_light.world
