<?xml version="1.0"?>
<package format="2">
  <name>mibvs</name>
  <version>0.0.0</version>
  <description>The mibvs package</description>
  <maintainer email="shayan.sp@torontomu.ca">Shayan</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/Shayan-Sepahvand/M-IBVS.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>bebop_gazebo</exec_depend>
  <export>
  </export>
</package>
